adicionando o layout em landscapee o ingles nas strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Agenda</string>
+    <string name="campo_nome">Nome</string>
+    <string name="campo_endereco">Endereço</string>
+    <string name="campo_telefone">Telefone</string>
+    <string name="campo_site">Site</string>
     <string name="title_activity_formulario">Formulário</string>
     <string name="title_activity_main">MainActivity</string>
 </resources>
