terminando as fragments do detalhes provas nas duas orientações e colocando a fragment na pilha das activitys

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="campo_site">Site</string>
     <string name="title_activity_formulario">Formulário</string>
     <string name="title_activity_main">MainActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
